--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <section class="sec-1">
         <div class="pack"><img src="./public/img/packages.png" alt=""></div>
         <div class="texto">
-            <h1>à chaque étape son pack</h1>
+            <h1>A chaque étape son pack</h1>
             <h3>naitre,grandir et prospérer.</h3>
         </div>
     </section>
     <section class="sec-2">
-        <div class="btn1"><button>éclosion</button></div>
+        <div class="btn1"><button>Eclosion</button></div>
         <div class="mother-ecl">
             <div class="eclosion"><img src="./public/img/icon-eclosion.png" alt=""></div>
             <div class="texto2">
@@ -57,14 +57,22 @@
     </section>
     <section class="sec-3">
         <div class="logo-sec3">
-            <div><img src="./public/img/Logo-logo.png" alt=""><p>logo</p></div>
-            <div><img src="./public/img/icon-charte-graphic.png" alt=""><p>carte graphique</p></div>
-            <div><img src="./public/img/site-single-page.png" alt=""><p>site single page</p></div>
-            <div><img src="./public/img/carte-visite.png" alt=""><p>carte de visite</p></div>
+            <div><img src="./public/img/Logo-logo.png" alt="">
+                <p>logo</p>
+            </div>
+            <div><img src="./public/img/icon-charte-graphic.png" alt="">
+                <p>carte graphique</p>
+            </div>
+            <div><img src="./public/img/site-single-page.png" alt="">
+                <p>site single page</p>
+            </div>
+            <div><img src="./public/img/carte-visite.png" alt="">
+                <p>carte de visite</p>
+            </div>
         </div>
     </section>
     <section class="sec-4">
-        <div class="btn2"><button>évolution</button></div>
+        <div class="btn2"><button>Evolution</button></div>
         <div class="mother-evo">
             <div class="evolution"><img src="./public/img/icon-evolution.png" alt=""></div>
             <div class="texto3">
@@ -79,14 +87,77 @@
     </section>
     <section class="sec-5">
         <div class="logo-sec5">
-            <div><img src="./public/img/Logo-logo.png" alt=""><p>logo</p></div>
-            <div><img src="./public/img/icon-charte-graphic.png" alt=""><p>carte graphique</p></div>
-            <div><img src="./public/img/site-vitrine.png" alt=""><p>site single page</p></div>
-            <div><img src="./public/img/reseaux-sociaux.png" alt=""><p>carte de visite</p></div>
+            <div><img src="./public/img/Logo-logo.png" alt="">
+                <p>logo</p>
+            </div>
+            <div><img src="./public/img/icon-charte-graphic.png" alt="">
+                <p>carte graphique</p>
+            </div>
+            <div><img src="./public/img/site-vitrine.png" alt="">
+                <p>site single page</p>
+            </div>
+            <div><img src="./public/img/reseaux-sociaux.png" alt="">
+                <p>carte de visite</p>
+            </div>
         </div>
         <div class="logo-alon"><img src="./public/img/carte-visite.png" alt=""></div>
         <p class="visite">carte de visite</p>
     </section>
+
+
+    <section class="sec-6">
+        <div class="btn3"><button>Envol</button></div>
+        <div class="mother-envol">
+            <div class="envol"><img src="./public/img/icon-envole.png" alt=""></div>
+            <div class="texto4">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
+                    <br> <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolor sequi, alias iste nesciunt
+                    incidunt at placeat quasi dolore voluptatem in commodi fugiat officia expedita.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laborum porro quo.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="sec-7">
+        <div class="logo-sec7">
+            <div><img src="./public/img/icon-analyse-flux-web.png" alt="">
+                <p>logo</p>
+            </div>
+            <div><img src="./public/img/icon-campagne-facebook.png" alt="">
+                <p>carte graphique</p>
+            </div>
+            <div><img src="./public/img/icon-campagne-adwords.png" alt="">
+                <p>site single page</p>
+            </div>
+            <div><img src="./public/img/icon-campagne-e-mailing.png" alt="">
+                <p>carte de visite</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="ft-txt">
+            <h1>Packs</h1>
+            <h1>Outils</h1>
+            <h1>Social Media</h1>
+        </div>
+        <div class="all-icones">
+            <div class="icone-footer1">
+                <div><img src="./public/img/icon-eclosion.png" alt=""></div>
+                <div><img src="./public/img/icon-envole.png" alt=""></div>
+                <div><img src="./public/img/icon-evolution.png" alt=""></div>
+        </div>
+        <div class="icone-footer2">
+            <div><img src="./public/img/identite-graphique.png" alt=""></div>
+            <div><img src="./public/img/reseaux-sociaux.png" alt=""></div>
+            <div><img src="./public/img/print.png" alt=""></div>
+        </div>
+        <div class="icone-footer3">
+            <div><img src="./public/img/google-plus.png" alt=""></div>
+            <div><img src="./public/img/social-f.png" alt=""></div>
+        </div>
+         </div>
+    </footer>
 
 
 
