--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div>
     </section>
     <section class="sec-5">
-        <div class="logo-sec5">
+        
+        <div class="media"><div class="logo-sec5">
             <div><img src="./public/img/Logo-logo.png" alt="">
                 <p>logo</p>
             </div>
@@ -99,7 +100,7 @@
             <div><img src="./public/img/reseaux-sociaux.png" alt="">
                 <p>carte de visite</p>
             </div>
-        </div>
+        </div></div>
         <div class="logo-alon"><img src="./public/img/carte-visite.png" alt=""></div>
         <p class="visite">carte de visite</p>
     </section>
@@ -142,6 +143,7 @@
             <h1>Social Media</h1>
         </div>
         <div class="all-icones">
+            
             <div class="icone-footer1">
                 <div><img src="./public/img/icon-eclosion.png" alt=""></div>
                 <div><img src="./public/img/icon-envole.png" alt=""></div>
